# experiments

./: .gitignore  README
asm/: Makefile  args.asm  asm  atoi.asm  factorial.asm  hello64.asm  lib.asm  loop.asm  mean.asm  printf.asm  sum.asm
asterisk/: README  res_hello.c  test_call.sh
cpp/: brk.c  cache_size.cc  casting.cc  casting_virtual.cc  cin.cc  container.cc  double.c  interview.cpp  istream.cc  perm.c  skiplist.cc  test.c  whileone.cc
cs/: hellocoffee.html
emdr/: README.md  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
go/: README  README.md  astar.go  echo.go  empty.go  hello.go  parity.go  shuffle.go  shuffle_test.go  slices.go  stack.go  wscript
haskell/: First.hs  LineServer.hs  LineServerTest.hs  PCRESub.hs  PCRESubTest.hs  PNM.hs  README  TCPServer.hs  (+63 more)
rust/fe/: AGENTS.md  Cargo.toml  README.md  ai-state.md  justfile
rust/fe/scripts/: ai-state.md  codesign.sh  create-entitlements.sh  new-codesign-cert.sh  release.sh
rust/fe/src/: ai-state.md  cli.rs  format.rs  io.rs  logging.rs  main.rs  ops.rs
rust/fe/src/enclave/: ai-state.md  mock.rs  mod.rs  secure_enclave.rs  yubikey.rs
rust/fe/swift/: README.md  ai-state.md  entitlements.plist  fe.swift  justfile
rust/fe/tests/: cli.rs  secure_enclave.rs  yubikey.rs
rust/hello/: Cargo.toml  README.md
rust/hello/src/: args.rs  arrays.rs  asyncawait.rs  dynamic.rs  functions.rs  generics.rs  iterators.rs  json.rs  lifetimes.rs  main.rs  pointers.rs  print.rs  server.rs  strings.rs  structs.rs  threadpool.rs  threads.rs  traits.rs  tuples.rs  types.rs  vars.rs
(+397 files in other folders)
